# zenoh-codec

./: Cargo.toml  README.md  justfile
derive/: Cargo.toml
derive/examples/: parse.rs
derive/src/: ext.rs  field.rs  lib.rs  model.rs  struct.rs
derive/src/ext/: u64_decode.rs  u64_encode.rs  u64_len.rs
derive/src/field/: decode.rs  encode.rs  flag.rs  len.rs  parse.rs
derive/src/model/: attribute.rs  ty.rs
derive/src/struct/: decode.rs  encode.rs  flag.rs  header.rs  len.rs  parse.rs
examples/: ext.rs  field.rs  parse.rs  struct.rs
src/: ext.rs  field.rs  lib.rs  marker.rs  phantom.rs  struct.rs  test.rs
src/field/: array.rs  option.rs  uint.rs
src/struct/: array.rs  bytes.rs  option.rs  str.rs  uint.rs
src/tests/: ext.rs  struct.rs
