[package]
name = "zenoh-codec"
version = "0.1.0"
edition = "2024"

[dependencies]
zenoh-codec-derive = { version = "0.1.0", path = "derive" }

[profile.release]
opt-level = 3           # Maximum optimization
lto = "fat"             # Full Link Time Optimization across all crates
codegen-units = 1       # Compile in a single unit for better optimization
panic = "abort"         # Removes stack unwinding code; smaller & faster binaries
strip = true            # Remove symbol/debug info from final binary
incremental = false     # Disable incremental compilation for fully optimized builds
debug = false           # Don’t include debug symbols
overflow-checks = false # Skip integer overflow checks
